<?xml version="1.0"?>
<package format="2">
  <name>p3at_teleop</name>
  <version>0.0.0</version>
  <description>Package to launch the P3AT mobile base and teleoperate it with a joystick.</description>

  <maintainer email="mark.zolotas12@imperial.ac.uk">Mark Zolotas</maintainer>

  <license>MIT</license>

  <author>Mark Zolotas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <!-- Only runtime dependencies, not needed for building -->
  <exec_depend>joy</exec_depend>
  <exec_depend>p2os_driver</exec_depend>
  <exec_depend>p2os_urdf</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
